Spacing issue resolved by removing jarallex

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,3 @@
-/*
-* Template Name: Learner
-* Template Author: Untree.co
-* Template License: https://creativecommons.org/licenses/by/3.0/
-* Author URI: https://untree.co/
-
-* Twitter: https://twitter.com/Untree_co
-* Facebook: https://web.facebook.com/Untree.co/
-* Pinterest: https://pinterest.com/Untree_co/
-*/
-/* Base */
 :root{
   --theme-primary-color-custom : #21325E;
 }
@@ -148,12 +137,12 @@ h1, h2, h3, h4, h5,
   font-size: 18px; }
 
 .site-section {
-  padding: 2.5em 0; }
+  padding: 1.5em 0; }
   @media (min-width: 768px) {
     .site-section {
-      padding: 5em 0; } }
+      padding: 2em 0; } }
   .site-section.site-section-sm {
-    padding: 4em 0; }
+    padding: 2em 0; }
 
 .site-section-heading {
   padding-bottom: 20px;
@@ -608,7 +597,8 @@ h1, h2, h3, h4, h5,
   z-index: 100;
   width: 100%; }
   .sticky-wrapper + .site-blocks-cover {
-    margin-top: 96px; }
+    /* margin-top: 96px; */
+   }
   .sticky-wrapper .site-navbar {
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
@@ -1308,23 +1298,32 @@ h1, h2, h3, h4, h5,
 }
 .card{
   background: none;
-  height: 200px;
+  height: 300px;
 }
 .card:hover{
-  background: #f23a2e;
+  background: #fe5862;
 }
 .card:hover .card-cover{
   display: none;
 }
 .card:hover .unit-4{
   display: flex;
+  color: #fff;
 }
 
 .unit-4 .unit-4-icon span {
-  font-size: 22px; }
+  font-size: 22px;
+  color: #fff; 
+}
 
 .unit-4 h3 {
-  font-size: 18px; }
+  font-size: 18px;
+  color: #fff;
+}
+
+.unit-4 a{
+  color: #fff;
+}
 
 .h-entry img {
   margin-bottom: 30px; }
